tests/bad/bad_json.lens
process when(e) {
    print("foo")
}
